--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -13,9 +13,11 @@ jobs:
     - name: Checkout do código
       uses: actions/checkout@v3
     
-    - name: Atualizar site
+    - name: Atualizar site (com limpeza forçada)
       run: |
         cd /var/www/html
-        sudo git pull origin main
+        sudo git fetch --all
+        sudo git reset --hard origin/main
+        sudo git clean -fd
         sudo systemctl restart nginx
-        echo "Deploy realizado com sucesso em $(date)"
+        echo "✅ Deploy realizado com sucesso em $(date)"
